# security

./: .ansible-lint  .editorconfig  .envrc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint  .yamllint.yml  AUDIT_REPORT.md  CHANGELOG.md  COMPLETE_ENTERPRISE_SETUP.md  CONTRIBUTING.md  DEPLOYMENT_READY.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PROMPT.md  JOURNEY_LOG.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  RENOVATE_AND_TESTING_STATUS.md  RESUMEN_FINAL.md  SECURITY.md  START_HERE.md  WORKFLOW_FIX_SUMMARY.md  ansible.cfg  galaxy.yml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.yml
.devcontainer/: Dockerfile.compliance  devcontainer.compliance.json  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  lychee.toml  markdown-link-check-config.json  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ansible-test.yml  branch-management.yml  ci-cd-enterprise.yml  ci-uv.yml  ci-uv.yml.disabled  ci.yml  ci.yml.disabled  codeql.yml  docker-test.yml  docs.yml  kernel-vm-test.yml  molecule-chaos.yml  molecule-complete-stack.yml  molecule-test.yml  quality-gates.yml  quality-gates.yml.disabled  scorecard.yml  security-scan.yml  ssh-access-vm-test.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-ntp-hardening/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-05-PLAN.md
.planning/phases/02-user-audit/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-SUMMARY.md  02-07-SUMMARY.md
.planning/phases/03-rsyslog-forwarding/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-SUMMARY.md
.planning/phases/04-antivirus/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md
.planning/phases/05-tls-hardening/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md
.planning/phases/05.1-ssh-access-vm-test-commit-workflow-playbook-and-user-audit-inventory-for-vm-based-sssd-ad-integration-validation-real-sshd-sudoers-pam-access-no-ad-dc-required/: 05.1-01-PLAN.md  05.1-01-SUMMARY.md
.planning/phases/06-usbguard/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-05-PLAN.md  06-05-SUMMARY.md
.planning/phases/06.1-security-audit-remediations-critical-01-high-01-high-03-medium-02-high/: 06.1-01-PLAN.md  06.1-01-SUMMARY.md  06.1-02-PLAN.md  06.1-02-SUMMARY.md  06.1-SUMMARY.md  (+1 more)
changelogs/: README.md  config.yaml
changelogs/fragments/: v1.3.0-new-roles.yml  v1.4.0-new-roles.yml
docs/: ACTION_PLAN.md  BEST_PRACTICES_IMPROVEMENTS.md  DOCKER_TESTING.md  GITHUB_BRANCH_PROTECTION.md  GITHUB_STRATEGY.md  INFISICAL_VS_VAULT.md  NEXT_LEVEL_ROADMAP.md  PLATFORM_SUPPORT.md  PUBLICATION_STRATEGY.md  REAL_WORLD_SCENARIOS.md  RELEASING.md  RENOVATE.md  ROADMAP_TO_TOP_0.01.md  SECRETS_BACKEND_AGNOSTIC.md  SECURITY_AND_QUALITY.md  SECURITY_PHILOSOPHY.md  UV_SETUP.md  WORKFLOWS.md  architecture.md  capabilities-matrix.md  compliance-evidence.md  compliance-mapping.md  controls.md  debian13-authentication-runbook.md  evidence-pack.md  openssf-best-practices.md  operational_runbooks.md  quickstart.md  runbooks.md  ssh-ad-integration.md
examples/: README.md
examples/inventory/: hosts.yml
group_vars/all/: security_phases.yml
group_vars/new_servers/: security.yml
group_vars/production/: security.yml
group_vars/staging/: security.yml
meta/: main.yml  runtime.yml
molecule/chaos/: converge.yml  molecule.yml
molecule/complete_stack/: converge.yml  molecule.yml  verify.yml
molecule/complete_stack_ci/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/default/: molecule.yml
molecule/minimal/: converge.yml  molecule.yml
playbooks/: audit-only.yml  debian13-auth-hardening.yml  dry-run.yml  enforce-new-servers.yml  enforce-production-gradual.yml  enforce-staging.yml  generate-compliance-report.yml  harden-system.yml  kernel-vm-test.yml  preflight-check.yml  review-system.yml  review.yml  site.yml  ssh-access-vm-test.yml  test.yml
roles/aide/: README.md
roles/antivirus/: README.md
roles/apache_hardening/: README.md
roles/apparmor/: README.md
roles/audit_logging/: README.md
roles/automated_patching/: README.md
roles/boot_hardening/: README.md
roles/cis_baseline/: README.md
roles/compliance_evidence/: README.md
roles/encryption_at_rest/: README.md
roles/firewall/: README.md
roles/grype_scanner/: README.md
roles/kernel_hardening/: README.md
roles/mysql_hardening/: README.md
roles/nginx_hardening/: README.md
roles/ntp_hardening/: README.md
roles/pam_mfa/: README.md
roles/pam_security/: README.md
roles/rsyslog_forwarding/: README.md
roles/security_capabilities/: README.md
roles/selinux_enforcement/: README.md
roles/service_accounts_transfer/: README.md
roles/sshd_hardening/: README.md
roles/sssd_ad_integration/: README.md
roles/sudoers_baseline/: README.md
roles/system_hardening/: README.md
roles/tls_hardening/: README.md
roles/tomcat_hardening/: README.md
roles/usbguard/: README.md
roles/user_audit/: README.md
scripts/: ensure-precommit-locked.sh  generate-sbom.sh  install-security-tools.sh  kickstart-top-0.01.sh  resolve-docker-digests.sh  test-all-platforms.sh  test-quick.sh  validate-all.sh  validate-no-log.py
tasks/: backup-configs.yml  rollback.yml  validate-services.yml
tests/integration/: conftest.py  test_auth_stack.py
tests/property_tests/: test_sshd_template_properties.py  test_sudoers_template_properties.py
tests/sanity/: ignore-2.18.txt
(+526 files in other folders)
